# SimpleSG

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  SAFETY_PERFORMANCE_ANALYSIS.md
HOWTO/: BrowserPThreadSupport.md  DevContainer_WSL.md  MacOsLeakDetection.md
Models/: PumpkinLid-DD.stl
cmake/: FindZLIB.cmake
models/: Pumpkin-DD.stl
samples/: .clang-format  Collision.cpp  EmTriangle.cpp  MouseNav.cpp  MouseNav.h  Orbit.cpp  Triangle.cpp  Viewer.cpp  debug.entitlements
shaders/: CMakeLists.txt  ColorFragmentShader.fs.wgsl  ColorFragmentShader.ps.hlsl  ColorShader.ps.hlsl  ColorShader.wgsl  ColorVertexShader.vs.hlsl  ColorVertexShader.vs.wgsl  FragmentShader.fs.wgsl  FragmentShader.ps.hlsl  FullScreenTriangle.fs.wgsl  FullScreenTriangle.ps.hlsl  FullScreenTriangle.vs.wgsl  ResolveShader.wgsl  TransformShader.cs.wgsl  TransformShader.wgsl  VertexShader.vs.hlsl  VertexShader.vs.wgsl
src/: .clang-format  Assert.cpp  Assert.h  AssertHelper.cpp  AssertHelper.h  AutoDeleter.h  BoundingVolumes.cpp  BoundingVolumes.h  Bounds.cpp  Bounds.h  CacheKey.h  Camera.cpp  Camera.h  CameraNode.h  CgltfModelLoader.cpp  CgltfModelLoader.h  CliState.h  CliUi.cpp  CliUi.h  Color.h  Compositor.cpp  Compositor.h  CoopScheduler.cpp  CoopScheduler.h  DawnGpuDevice.cpp  DawnGpuDevice.h  DawnRenderCompositor.cpp  DawnRenderCompositor.h  DawnRenderer.cpp  DawnRenderer.h  DawnSceneKit.cpp  DawnSceneKit.h  DawnScenePack.h  DevUi.cpp  DevUi.h  ECS.h  EcsChildTransformPool.cpp  EcsChildTransformPool.h  EcsTransformNodePool.cpp  EcsTransformNodePool.h  (+153 more)
src/shaders/: CMakeLists.txt  ColorShader.wgsl  ColorShaderContract.cpp  ColorShaderContract.h  CompositeShaderContract.cpp  CompositeShaderContract.h  CompositorShader.wgsl  CompositorShaderContract.cpp  CompositorShaderContract.h  GpuBufferTypes.h  ResolveShader.wgsl  ShaderInterop.h  ShaderTypes.h  TransformShader.wgsl  TransformShaderContract.cpp  TransformShaderContract.h
src/tools/gltfcook/: gltfcook.cpp
tests/: AABB.test.cpp  AABoundingBox.test.cpp  AppDriver.cpp  AppDriver.h  Application.h  BoundingBox.test.cpp  BoundingBox.unit.cpp  BoundingCapsule.test.cpp  BoundingCapsule.unit.cpp  BoundingSphere.test.cpp  BoundingSphere.unit.cpp  Camera.test.cpp  Camera.unit.cpp  CoopScheduler.test.cpp  Cube.cpp  ECS.test.cpp  EcsChildTransformPool.test.cpp  EcsTransformNodePool.test.cpp  GLTF.cpp  GridHash.test.cpp  GridHash.unit.cpp  LuaRepl.cpp  LuaRepl.h  Mat44.test.cpp  MouseNav.cpp  MouseNav.h  Orbit.cpp  PoolAllocator.test.cpp  Quat.test.cpp  Radians.test.cpp  SemanticInteger.test.cpp  Sponza.cpp  Triangle.cpp  TrsTransform.test.cpp  Uri.test.cpp  Vec2.test.cpp  Vec3.test.cpp  Vec4.test.cpp  Viewer.cpp  cube.cpp  (+5 more)
